# ghs-recipe-maker

./: .flake8  LICENSE  Makefile  README.md  app.py  async_search.ipynb  extract_html_text.py  llama.ipynb  parser.ipynb  pyproject.toml  read_url.ipynb  requirements.txt  sql_chain_dev.ipynb  test-agent-with-url.ipynb  test-agent.ipynb  test-estimator-pipeline.py  test-search-agent.py  test.py  test_recipe_extractor_chain.ipynb  test_serper_api.ipynb  testing.ipynb
.github/workflows/: ci.yaml  continuous_integration.yaml
agent/: __init__.py  co2_estimator.py  main.py  search_agent.py
chains/: async_search.py  co2_search.py  co2_sql.py  recipe_extractor.py  weight_est.py
data/: dk_co2_emission.db
estimator/: __init__.py  main.py
estimator/agent/: __init__.py  main.py  search_agent.py
estimator/chains/: co2_sql.py  recipe_extractor.py  search_co2_estimator.py  weight_est.py
estimator/data/: create_dk_co2_emission_db.py  dk_co2_emission.db  dk_co2_emissions.csv
estimator/prompt_templates/: co2_search_prompts.py  co2_sql_prompts.py  main_agent.py  recipe_extractor_prompt.py  weight_est_prompts copy.py  weight_est_prompts.py
estimator/utils/: __init__.py  output_generator.py  url.py
food_co2_estimator/: __init__.py  main.py
food_co2_estimator/agent/: search_agent.py
food_co2_estimator/chains/: rag_co2_estimator.py  rag_so2_estimator.py  recipe_extractor.py  search_co2_estimator.py  sql_co2_estimator.py  translator.py  weight_estimator.py
food_co2_estimator/data/: dk_co2_emission.db
food_co2_estimator/language/: detector.py  translator.py
food_co2_estimator/output_parsers/: co2_estimator.py  recipe_extractor.py  retry_parser.py  sql_co2_estimator.py  weight_estimator.py
food_co2_estimator/prompt_templates/: rag_co2_estimator.py  recipe_extractor.py  search_co2_estimator.py  sql_co2_estimator.py  weight_estimator.py
food_co2_estimator/pydantic_models/: co2_estimator.py  recipe_extractor.py  search_co2_estimator.py  weight_estimator.py
food_co2_estimator/retrievers/: emission_retriever.py  search_retriever.py
food_co2_estimator/url/: __init__.py  url2markdown.py
food_co2_estimator/utils/: __init__.py  (+4 more)
prompt_templates/: agent.py  co2_search_prompts.py  co2_sql_prompts.py  co2_sql_prompts_copy.py  en_co2_estimator_agent.py  en_co2_sql_prompts.py  en_weight_est_prompts.py  main_agent copy.py  main_agent.py  recipe_extractor_prompt.py  weight_est_prompts copy.py  weight_est_prompts.py
sandbox/: async_google_search.py  chroma.ipynb  extract_html_text.py  html2text.ipynb  math.ipynb  misc.py  output_parser_experiment.ipynb  read_url.ipynb  sql_chain_dev.ipynb  test_vectorstore.ipynb
templates/: index.html
tests/: test_app.py
utils/: __init__.py
(+24 files in other folders)
