[tool.poetry]
name = "food co2 estimator"
version = "0.1.0"
description = "Repository for estimating CO2 emission from the ingredient list of recipies"
authors = ["Yes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
langchain = "^0.0.263"
langchain-experimental = "^0.0.8"
pandas = "^2.0.3"
langdetect = "^1.0.9"
flask = {extras = ["async"], version = "^2.3.2"}
validators = "^0.21.2"
bs4 = "^0.0.1"
openai = "^0.27.8"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
