[tool.poetry]
name = "food-co2-estimator"
version = "0.1.0"
description = "Repository for estimating CO2 emission from the ingredient list of recipies"
authors = ["Tue Thomsen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
langchain = "^0.3.4"
pandas = "^2.0.3"
langdetect = "^1.0.9"
flask = { extras = ["async"], version = "^2.3.2" }
validators = "^0.21.2"
bs4 = "^0.0.1"
openai = "^1.52.0"
gunicorn = "^21.2.0"
openpyxl = "^3.1.2"
langchain-community = "^0.3.3"
langchain-openai = "^0.2.3"
langchain-experimental = "^0.3.2"
pydantic = "^2.9.2"
langchain-chroma = "^0.1.4"
translate = "^3.6.1"
deep-translator = "^1.11.4"
tqdm = "^4.67.0"
poetry-plugin-export = "^1.8.0"
markdownify = "^0.14.1"
make = "^0.1.6.post2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.8.5"
pyright = "^1.1.391"
pytest = "^8.3.4"

[tool.ruff]
# Exclude files and directories
exclude = [".git", ".venv", "__pycache__", "*.ipynb"]

# Line length
line-length = 88

# Python target version
target-version = "py313"

# Enable auto-fixes
lint.fixable = ["ALL"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false
reportUnknownVariableType = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
